# conversor-de-base-numerica

./: README.md  index.html  q  script.js  style.css
Atividadew2/app/: converter.py  docker-publish.yml  index.html  main.py  pyproject.toml  script.js  style.css
bora/app/app/: converter.py  index.html  main.py  script.js  style.css
